dfir_rs/tests/compile-fail/surface_anti_join_badtypes.stderr
error[E0631]: type mismatch in closure arguments
 --> tests/compile-fail/surface_anti_join_badtypes.rs:5:13
  |
5 |           j = anti_join() -> for_each(std::mem::drop);
  |               ^----------
  |               |
  |  _____________found signature defined here
  | |
6 | |         source_iter(0..10) -> map(|x| (x, x)) -> [pos]j;
7 | |         source_iter(0..10) -> map(|_| "string") -> [neg]j;
  | |_______________________________________________^ expected due to this
  |
  = note: expected closure signature `fn(&str) -> _`
             found closure signature `fn({integer}) -> _`
  = note: required for `dfir_rs::sinktools::for_each::ForEach<{closure@$DIR/tests/compile-fail/surface_anti_join_badtypes.rs:5:13: 5:24}>` to implement `dfir_rs::futures::Sink<&str>`
note: required by a bound in `pivot_run_sg_2v1`
 --> tests/compile-fail/surface_anti_join_badtypes.rs:5:13
  |
5 |           j = anti_join() -> for_each(std::mem::drop);
  |  _____________^
6 | |         source_iter(0..10) -> map(|x| (x, x)) -> [pos]j;
7 | |         source_iter(0..10) -> map(|_| "string") -> [neg]j;
  | |_______________________________________________^ required by this bound in `pivot_run_sg_2v1`
